--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,19 @@
 <div class="container-fluid">
   <h2>Registration Form</h2>
-  <form>
+  <form [formGroup]="registrationForm">
   <div class="form-group">
     <label>UserName</label>
-    <input type="text" class="form-control">
+    <input type="text" formControlName="userName" class="form-control">
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" class="form-control">
+    <input type="password" formControlName="password" class="form-control">
   </div>
   <div class="form-group">
  <label>Confirm Password</label>
-    <input type="password" class="form-control">
+    <input type="password"  formControlName="confirmPassword" class="form-control">
   </div>
    <button class=" btn btn-primary" type="submit">Register</button>
 </form>
+{{registrationForm.value | json}}
 </div>
