--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,21 @@
  <label>Confirm Password</label>
     <input type="password"  formControlName="confirmPassword" class="form-control">
   </div>
+  <div formGroupName="address">
+  <div class="form-group">
+    <label>City</label>
+    <input formControlName="city" type="text" class="form-control">
+  </div>
+  <div class="form-group">
+    <label>State</label>
+    <input formControlName="state" type="text" class="form-control">
+  </div>
+  <div class="form-group">
+    <label>Postal Code</label>
+    <input formControlName="postalCode" type="text" class="form-control">
+  </div>
+</div>
+
    <button class=" btn btn-primary" type="submit">Register</button>
 </form>
 {{registrationForm.value | json}}
