--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
   <h2>Registration Form</h2>
+  {{registrationForm.value | json}}
   <form [formGroup]="registrationForm">
   <div class="form-group">
     <label>UserName</label>
@@ -29,6 +30,7 @@
 </div>
 
    <button class=" btn btn-primary" type="submit">Register</button>
+   <button (click)="loadApiData()" class="btn btn-secondary ml-2" type="button">Load ApiData</button>
 </form>
-{{registrationForm.value | json}}
+
 </div>
