--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,19 @@
   <form [formGroup]="registrationForm">
   <div class="form-group">
     <label>UserName</label>
-    <input type="text" formControlName="userName" class="form-control">
+    <input [class.is-invalid]="userName.invalid &&
+    userName.touched"type="text" formControlName="userName" class="form-control">
+    <!--This is validation example for single condition-->
+   <!--  <small [class.d-none] ="userName.valid ||
+    userName.untouched"class="text-danger">Name is required</small> -->
+
+    <!--Validations For Multiple condition-->
+<div *ngIf="userName.invalid && userName.touched">
+  <small  *ngIf="userName.errors ?.required" class="text-danger">Name is required</small>
+  <small *ngIf="userName.errors ?.minlength" class="text-danger">Name should be at least 3 characters</small>
+
+
+</div>
   </div>
   <div class="form-group">
     <label>Password</label>
