--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,11 +23,13 @@
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" formControlName="password" class="form-control">
+    <input  type="password" formControlName="password" class="form-control">
+
   </div>
   <div class="form-group">
  <label>Confirm Password</label>
-    <input type="password"  formControlName="confirmPassword" class="form-control">
+    <input [class.is-invalid]="registrationForm.errors?.misMatch" type="password"  formControlName="confirmPassword" class="form-control">
+    <small class="text-danger" *ngIf="registrationForm.errors?.misMatch">Password don't match</small>
   </div>
   <div formGroupName="address">
   <div class="form-group">
