--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,15 @@
 </div>
   </div>
   <div class="form-group">
+    <label>Email</label>
+    <input [class.is-invalid]="email.invalid && email.touched" type="text" class="form-control" formControlName="email">
+    <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is Required</small>
+  </div>
+<div class="form-check mb-3">
+  <input type="checkbox" class="form-check-input" formControlName="subscribe">
+  <label class="form-check-label">Send me promotional offers</label>
+</div>
+  <div class="form-group">
     <label>Password</label>
     <input  type="password" formControlName="password" class="form-control">
 
