--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,8 +23,12 @@
   </div>
   <div class="form-group">
     <label>Email</label>
+    <button type="button" class="btn btn-secondary btn-sm m-2" (click)="addAlternateEmail()">Add Email</button>
     <input [class.is-invalid]="email.invalid && email.touched" type="text" class="form-control" formControlName="email">
     <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is Required</small>
+    <div formArrayName="alternateEmails" *ngFor="let email of alternateEmails.controls;let i=index">
+    <input type="text" class="form-control my-1" [formControlName]="i">
+    </div>
   </div>
 <div class="form-check mb-3">
   <input type="checkbox" class="form-check-input" formControlName="subscribe">
